--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -77,7 +77,7 @@
                             {% csrf_token %}
                             <b>{{question.text}}</b><br/>
                             <div class="form-group">
-                                {% for choice in question.choice_set.all %}
+                                {% for choice in question.choice_text_set.all %}
                                     <div class="form-check">
                                         <label class="form-check-label">
                                             <input type="checkbox" name="choice_{{choice.id}}"
